[ALLI-3737] fix bullets [ALLI-3800] Image rights fix if no image-rights + hide unnecessary scrollbar

--- a/themes/finna/less/bootstrap.less
+++ b/themes/finna/less/bootstrap.less
@@ -1527,8 +1527,6 @@ ul.jstree-container-ul > li.jstree-node, .list-group.facet .list-group-item:not(
         margin-bottom: 25px;
     }
     & ul li {
-        list-style-type: disc;
-        margin-left: 15px;
         margin-bottom: 3px;
     }
 }
