--- a/themes/finna/less/bootstrap/navs.less
+++ b/themes/finna/less/bootstrap/navs.less
@@ -11,7 +11,7 @@
 // add classes when there are too many tabs to fit on the screen
 .tabs-responsive {
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     &::-webkit-scrollbar {
         display: none;   
     }
